src/include/yices_types.h


typedef int32_t term_t;
typedef int32_t type_t;
typedef struct type_vector_s {
  uint32_t capacity;
  uint32_t size;
  type_t *data;
} type_vector_t;